--- a/assets/style.css
+++ b/assets/style.css
@@ -6,21 +6,19 @@
 
 body {
     background: url('img/bg-desktop.webp');
-    font-family: Bai Jamjuree;
+    font-family: 'Bai Jamjuree', sans-serif; /* Certifique-se de importar a fonte */
 }
 
 #container {
     display: flex;
-    /* Elementos dispostos em linha */
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 4rem;
     gap: 3rem;
-
 }
 
 .cartao {
-    margin: 1rem 1rem;
+    margin: 1rem;
     height: 20rem;
     flex-grow: 1;
     flex-basis: calc(33% - 6rem);
@@ -47,9 +45,8 @@ body {
 }
 
 .cartao__conteudo p {
-    margin-top: 1rem;
+    margin-top: 4rem; /* Removida a linha anterior */
     padding: 2rem;
-    margin-top: 4rem;
     font-size: 1.4vw;
 }
 
@@ -88,7 +85,7 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 2rem;
+    min-height: 2rem; /* Alterado para min-height */
 }
 
 footer p {
