--- a/assets/style.css
+++ b/assets/style.css
@@ -6,19 +6,21 @@
 
 body {
     background: url('img/bg-desktop.webp');
-    font-family: 'Bai Jamjuree', sans-serif; /* Certifique-se de importar a fonte */
+    font-family: Bai Jamjuree;
 }
 
 #container {
     display: flex;
+    /* Elementos dispostos em linha */
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 4rem;
     gap: 3rem;
+
 }
 
 .cartao {
-    margin: 1rem;
+    margin: 1rem 1rem;
     height: 20rem;
     flex-grow: 1;
     flex-basis: calc(33% - 6rem);
@@ -45,8 +47,9 @@ body {
 }
 
 .cartao__conteudo p {
-    margin-top: 4rem; /* Removida a linha anterior */
+    margin-top: 1rem;
     padding: 2rem;
+    margin-top: 4rem;
     font-size: 1.4vw;
 }
 
@@ -85,7 +88,7 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-    min-height: 2rem; /* Alterado para min-height */
+    height: 2rem;
 }
 
 footer p {
