--- a/assets/style.css
+++ b/assets/style.css
@@ -98,7 +98,7 @@ footer p {
 }
 
 
-@media (max-weight: 560px){
+@media (max-width: 560px){
     body{
         background: url(img/bg-mobile.webp);
     }
