--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background: url('img/Fundo\,preto\,4k.jpg');
+    background: url('img/Fundo,preto,4k.jpg');
     font-family: Bai Jamjuree;
 }
 
